# Semseterser

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md
src/: game.cpp  main.cpp
src/game/: game.cpp  game.hpp
